--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -124,7 +124,7 @@ jobs:
 
       - name: Start Application
         run: |
-          python app/app.py &
+          python app/main.py &
           sleep 5
 
       - name: Run E2E Tests
