--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -124,7 +124,7 @@ jobs:
 
       - name: Start Application
         run: |
-          python app/main.py &
+          cd app && python main.py &
           sleep 5
 
       - name: Run E2E Tests
@@ -205,5 +205,3 @@ jobs:
 
       - name: Image Digest
         run: echo "Image pushed successfully!"
-
-
